Adjust build scripts for travis-ci.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_minimum_required(VERSION 3.14)
 set(logr_root_prj logr_root)
 
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake-scripts/cpp_standard.cmake")
+include("${CMAKE_CURRENT_SOURCE_DIR}/cmake-scripts/libcxx.cmake")
 
 message(STATUS "ENABLE C++17")
 cxx_17()
@@ -59,6 +60,7 @@ option(LOGR_WITH_LOG4CPLUS_BACKEND "Provide logr with log4cplus backend" ON)
 # ------------------------------------------------------------------------------
 
 project(${logr_root_prj} CXX)
+handle_explicit_libcxx_if_necessary()
 
 # ------------------------------------------------------------------------------
 # Various helpers:
