--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 build: false
 
 environment:
-    PYTHON: "C:\\Python37"
+    PYTHON_HOME: "C:\\Python37"
 
     CONAN_REFERENCE: "logr/0.1.0"
     CONAN_USERNAME: "ngrodzitski"
@@ -14,7 +14,7 @@ environment:
 
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - set PATH=%PYTHON_HOME%;%PYTHON_HOME%/Scripts/;%PATH%
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - conan user # It creates the conan data directory
