--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ option(LOGR_PRJ_COLLAPSE_SRC_LOCATION_ENABLED
 option(LOGR_WITH_SPDLOG_BACKEND "Provide logr with spdlog backend" ON)
 option(LOGR_WITH_GLOG_BACKEND "Provide logr with glog backend" ON)
 option(LOGR_WITH_LOG4CPLUS_BACKEND "Provide logr with log4cplus backend" ON)
+option(LOGR_WITH_BOOSTLOG_BACKEND "Provide logr with Boost.Log backend" ON)
 # ------------------------------------------------------------------------------
 
 if (NOT LOGR_CONAN_PACKAGING)
@@ -141,6 +142,14 @@ if (NOT LOGR_CONAN_PACKAGING)
 
     if (LOGR_WITH_LOG4CPLUS_BACKEND)
         find_package(log4cplus  REQUIRED)
+    endif ()
+
+    if (LOGR_WITH_LOG4CPLUS_BACKEND)
+        find_package(log4cplus  REQUIRED)
+    endif ()
+
+    if (LOGR_WITH_BOOSTLOG_BACKEND)
+        find_package(Boost  REQUIRED COMPONENTS log)
     endif ()
 
     if (LOGR_BUILD_BENCHMARKS)
