Introduce RT defined message level log function
Also contains adjustments for new versions of fmt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,13 @@ if (NOT LOGR_CONAN_PACKAGING)
     include("${CMAKE_CURRENT_SOURCE_DIR}/cmake-scripts/libcxx.cmake")
     include("${CMAKE_CURRENT_SOURCE_DIR}/cmake-scripts/static_runtime.cmake" )
 
-    message(STATUS "ENABLE C++17")
-    cxx_17()
+    if ("${EXPLICIT_CPPSTD}" STREQUAL "20" )
+        message(STATUS "ENABLE C++20")
+        cxx_20()
+    else ()
+        message(STATUS "ENABLE C++17")
+        cxx_17()
+    endif ()
 endif ()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
