--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,20 +1,8 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.15)
+project(test_package LANGUAGES CXX)
 
-include("${CMAKE_CURRENT_SOURCE_DIR}/../cmake-scripts/cpp_standard.cmake")
+find_package(logr REQUIRED)
 
-message(STATUS "ENABLE C++17")
-cxx_17()
-
-project(PackageTest CXX)
-
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
-
-add_executable(example example.cpp)
-target_link_libraries(example ${CONAN_LIBS})
-
-# CTest is a testing tool that can be used to test your project.
-# enable_testing()
-# add_test(NAME example
-#          WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-#          COMMAND example)
+add_executable(${PROJECT_NAME} test_package.cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE logr::logr)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
